removed LoadPlugin from File Menu of the MARS GUI. Use the lib_manager_gui instead. added the lib_manager_gui to the default other_libs.txt and the packageList.txt.example.

--- a/packageList.txt.example
+++ b/packageList.txt.example
@@ -15,6 +15,7 @@ mars/common/cfg_manager
 mars/common/data_broker
 
 mars/common/gui/main_gui
+mars/common/gui/lib_manager_gui
 mars/common/gui/cfg_manager_gui
 mars/common/gui/data_broker_gui
 mars/common/gui/log_console
