added rock/base-cmake and rock/base-types to build script

--- a/packageList.txt.example
+++ b/packageList.txt.example
@@ -9,6 +9,9 @@ external/minizip
 
 external/ode_mars
 
+rock/base-cmake
+rock/base-types
+
 mars/common/lib_manager
 mars/common/utils
 mars/common/cfg_manager
