added rock/base-types to install script

--- a/packageList.txt.example
+++ b/packageList.txt.example
@@ -12,6 +12,7 @@ external/ode_mars
 rock/base-cmake
 rock/base-types
 
+mars/scripts/cmake
 mars/common/lib_manager
 mars/common/utils
 mars/common/cfg_manager
