--- a/packageList.txt.example
+++ b/packageList.txt.example
@@ -16,8 +16,7 @@ external/ode_mars
 rock/base-cmake
 rock/base-types
 
-mars/scripts/cmake
-mars/common/lib_manager
+lib_manager
 mars/common/utils
 mars/common/cfg_manager
 mars/common/data_broker
