added some more functionality

--- a/packages.yml
+++ b/packages.yml
@@ -51,6 +51,12 @@ mars_viz:
   fetch_path: simulation/mars
   read_address: https://github.com/rock-simulation/mars.git
 
+mars_app:
+  path: simulation/mars
+  folder: app
+  fetch_path: simulation/mars
+  read_address: https://github.com/rock-simulation/mars.git
+
 viz_plugin:
   path: simulation/mars/plugins
   fetch_path: simulation/mars
