--- a/packages.yml
+++ b/packages.yml
@@ -33,6 +33,29 @@ lib_manager:
   path: .
   read_address: https://github.com/rock-simulation/lib_manager.git
 
+configmaps:
+  path: .
+  read_address: https://github.com/rock-simulation/configmaps.git
+
+smurf_parser:
+  path: .
+  read_address: https://github.com/rock-simulation/smurf_parser.git
+
+mars_entity_factory:
+  path: simulation/mars
+  folder: entity_generation/entity_factory
+  read_address: https://github.com/rock-simulation/mars.git
+
+mars_smurf:
+  path: simulation/mars
+  folder: entity_generation/smurf
+  read_address: https://github.com/rock-simulation/mars.git
+
+smurf_loader:
+  path: simulation/mars
+  folder: smurf_loader
+  read_address: https://github.com/rock-simulation/mars.git
+
 console_bridge:
   path: external/ros
   read_address: https://github.com/ros/console_bridge.git
