--- a/packages.yml
+++ b/packages.yml
@@ -95,3 +95,8 @@ config_map_gui:
   path: simulation/mars/common/gui
   fetch_path: simulation/mars
   read_address: https://github.com/rock-simulation/mars.git
+
+osg_lines:
+  path: simulation/mars/common/graphics
+  fetch_path: simulation/mars
+  read_address: https://github.com/rock-simulation/mars.git
