updated eigen version and added diff option to mars.sh

--- a/packages.yml
+++ b/packages.yml
@@ -16,6 +16,9 @@
 ##########################################################################
 
 
+eigen:
+  path: external
+
 tinyxml:
   path: external
   read_address: git://git.code.sf.net/p/tinyxml/git
