Add entity_view and SkyDomePlugin.

--- a/packages.yml
+++ b/packages.yml
@@ -154,6 +154,18 @@ connexion-plugin:
   fetch_path: simulation/mars
   read_address: https://github.com/rock-simulation/mars.git
 
+SkyDomePlugin:
+  path: simulation/mars/plugins/
+  folder: connexion_plugin
+  fetch_path: simulation/mars
+  read_address: https://github.com/rock-simulation/mars.git
+
+entity_view:
+  path: simulation/mars/plugins/
+  folder: connexion_plugin
+  fetch_path: simulation/mars
+  read_address: https://github.com/rock-simulation/mars.git
+
 cfg_manager:
   path: simulation/mars/common
   fetch_path: simulation/mars
